--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/c0nstantin1990/create-a-note#readme",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2"
   }
 }
