--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
-    "fontawesome": "^5.6.3"
+    "fontawesome": "^5.6.3",
+    "npm": "^9.7.2"
   }
 }
